--- a/config/default/prepare_features_components.yaml
+++ b/config/default/prepare_features_components.yaml
@@ -6,6 +6,7 @@ files:
 
     #' List of pretreated annotations. STRING
     pretreated:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_ms1_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_sirius_pretreated.tsv.gz
