--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,11 +51,13 @@ Collate:
     'annotate_spectra.R'
     'clean_bio.R'
     'clean_chemo.R'
-    'complement_structures_metadata.R'
+    'complement_metadata_structures.R'
     'create_adducts_neg.R'
     'create_adducts_pos.R'
     'create_dir.R'
-    'decorate.R'
+    'decorate_bio.R'
+    'decorate_chemo.R'
+    'decorate_masses.R'
     'dist_groups.R'
     'export_output.R'
     'export_params.R'
