--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ export(annotate_masses)
 export(annotate_spectra)
 export(clean_bio)
 export(clean_chemo)
-export(complement_structures_metadata)
+export(complement_metadata_structures)
 export(create_adducts_neg)
 export(create_adducts_pos)
 export(create_dir)
 export(decorate_bio)
 export(decorate_chemo)
-export(decorate_ms1)
+export(decorate_masses)
 export(dist_get)
 export(dist_groups)
 export(export_output)
@@ -51,104 +51,3 @@ export(split_tables_sop)
 export(weight_annotations)
 export(weight_bio)
 export(weight_chemo)
-importFrom(BiocParallel,MulticoreParam)
-importFrom(BiocParallel,SerialParam)
-importFrom(CompoundDb,CompDb)
-importFrom(CompoundDb,Spectra)
-importFrom(CompoundDb,createCompDb)
-importFrom(MetaboAnnotation,CompareSpectraParam)
-importFrom(MetaboAnnotation,MatchForwardReverseParam)
-importFrom(MetaboAnnotation,matchSpectra)
-importFrom(MetaboAnnotation,matchedData)
-importFrom(MsBackendMgf,MsBackendMgf)
-importFrom(MsBackendMgf,readMgf)
-importFrom(MsCoreUtils,gnps)
-importFrom(MsCoreUtils,navdist)
-importFrom(MsCoreUtils,ndotproduct)
-importFrom(MsCoreUtils,neuclidean)
-importFrom(MsCoreUtils,nspectraangle)
-importFrom(Spectra,MsBackendMemory)
-importFrom(Spectra,Spectra)
-importFrom(Spectra,export)
-importFrom(Spectra,filterIntensity)
-importFrom(Spectra,joinPeaksGnps)
-importFrom(Spectra,peaksData)
-importFrom(Spectra,setBackend)
-importFrom(Spectra,spectraData)
-importFrom(crayon,blue)
-importFrom(crayon,cyan)
-importFrom(crayon,green)
-importFrom(crayon,magenta)
-importFrom(crayon,red)
-importFrom(crayon,silver)
-importFrom(crayon,white)
-importFrom(crayon,yellow)
-importFrom(data.table,data.table)
-importFrom(data.table,foverlaps)
-importFrom(data.table,setkey)
-importFrom(docopt,docopt)
-importFrom(dplyr,across)
-importFrom(dplyr,add_count)
-importFrom(dplyr,all_of)
-importFrom(dplyr,anti_join)
-importFrom(dplyr,any_of)
-importFrom(dplyr,arrange)
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,coalesce)
-importFrom(dplyr,dense_rank)
-importFrom(dplyr,desc)
-importFrom(dplyr,distinct)
-importFrom(dplyr,everything)
-importFrom(dplyr,filter)
-importFrom(dplyr,full_join)
-importFrom(dplyr,group_by)
-importFrom(dplyr,group_cols)
-importFrom(dplyr,inner_join)
-importFrom(dplyr,left_join)
-importFrom(dplyr,matches)
-importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_all)
-importFrom(dplyr,mutate_at)
-importFrom(dplyr,mutate_if)
-importFrom(dplyr,n_distinct)
-importFrom(dplyr,na_if)
-importFrom(dplyr,rename)
-importFrom(dplyr,right_join)
-importFrom(dplyr,row_number)
-importFrom(dplyr,rowwise)
-importFrom(dplyr,select)
-importFrom(dplyr,setdiff)
-importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_all)
-importFrom(dplyr,summarize)
-importFrom(dplyr,summarize_all)
-importFrom(dplyr,tibble)
-importFrom(dplyr,ungroup)
-importFrom(dplyr,vars)
-importFrom(dplyr,where)
-importFrom(jsonlite,fromJSON)
-importFrom(readr,cols)
-importFrom(readr,read_csv)
-importFrom(readr,read_delim)
-importFrom(readr,read_tsv)
-importFrom(readr,write_delim)
-importFrom(rotl,tax_lineage)
-importFrom(rotl,taxonomy_taxon_info)
-importFrom(rotl,tnrs_match_names)
-importFrom(stats,dist)
-importFrom(stats,setNames)
-importFrom(stringr,fixed)
-importFrom(stringr,str_detect)
-importFrom(stringr,str_length)
-importFrom(stringr,str_match)
-importFrom(stringr,str_remove)
-importFrom(tibble,column_to_rownames)
-importFrom(tibble,rownames_to_column)
-importFrom(tidyr,gather)
-importFrom(tidyr,pivot_longer)
-importFrom(tidyr,pivot_wider)
-importFrom(tidyr,separate_rows)
-importFrom(utils,combn)
-importFrom(utils,download.file)
-importFrom(yaml,read_yaml)
-importFrom(yaml,write_yaml)
