--- a/params/default/prepare_libraries_adducts.yaml
+++ b/params/default/prepare_libraries_adducts.yaml
@@ -13,5 +13,11 @@ files:
     #' Structure organism pairs libraries.
     sop:
 
-      #' Merged structure organism pairs library. STRING
-      merged: data/interim/libraries/sop/merged/structures/metadata.tsv.gz
+      #' Merged structure organism pairs library.
+      merged:
+
+        #' Structures libraries.
+        structures:
+
+          #' Structures metadata. STRING
+          metadata: data/interim/libraries/sop/merged/structures/metadata.tsv.gz
