--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,6 +55,7 @@ Collate:
     'create_adducts_neg.R'
     'create_adducts_pos.R'
     'create_dir.R'
+    'create_edges_spectra.R'
     'decorate_bio.R'
     'decorate_chemo.R'
     'decorate_masses.R'
