--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(complement_metadata_structures)
 export(create_adducts_neg)
 export(create_adducts_pos)
 export(create_dir)
+export(create_edges_spectra)
 export(decorate_bio)
 export(decorate_chemo)
 export(decorate_masses)
