--- a/params/default/params.yaml
+++ b/params/default/params.yaml
@@ -79,8 +79,8 @@ files:
 
       #' List of spectral matching results. STRING
       spectral:
-        - data/interim/annotations/example_gnps.tsv
-        - data/interim/annotations/example_isdb.tsv.gz
+        - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps.tsv
+        - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb.tsv.gz
 
       #' Directory containing the sirius results. STRING
       sirius: data/interim/annotations/example_sirius/
@@ -95,7 +95,7 @@ files:
     filled: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_filled.tsv.gz
         
     #' Final results file. STRING
-    processed: FinalResults.tsv
+    processed: 96fa7c88200e4a03bee4644e581e3fb0_results.tsv
 
   #' Features files.
   features: 
@@ -104,7 +104,7 @@ files:
     raw: data/source/features.tsv.gz
 
     #' Prepared features file. STRING
-    prepared: data/interim/features/example_features.tsv.gz
+    prepared: data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_features.tsv.gz
 
   #' Libraries files.
   libraries:
@@ -209,7 +209,7 @@ files:
       edges:
 
         #' Raw edges file. STRING
-        raw: data/source/example_edges_manual.csv
+        raw: data/source/96fa7c88200e4a03bee4644e581e3fb0_edges_manual.csv
 
         #' Prepared edges file. STRING
         processed: data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_edges.tsv.gz
@@ -225,7 +225,7 @@ files:
 
     #' OPTIONAL. If tool is "manual".
     #' Biological origin metadata file. STRING
-    raw: data/source/example_metadata.tsv
+    raw: data/source/96fa7c88200e4a03bee4644e581e3fb0_metadata.tsv
 
     #' Taxonomically informed features file. STRING
     processed: data/interim/taxa/96fa7c88200e4a03bee4644e581e3fb0_taxed.tsv.gz
@@ -234,7 +234,7 @@ files:
   spectral:
 
     #' Raw spectral file. STRING
-    raw: data/source/example_spectra.mgf
+    raw: data/source/96fa7c88200e4a03bee4644e581e3fb0_spectra.mgf
 
 
 #' GNPS related parameters.
