--- a/params/default/prepare_features_edges.yaml
+++ b/params/default/prepare_features_edges.yaml
@@ -12,7 +12,7 @@ files:
 
         #' Raw edges file. STRING
         raw: 
-          - data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_edges_spectra.tsv
+          - data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_edges_spectra.tsv.gz
           - data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_edges_masses.tsv.gz
 
         #' Prepared edges file. STRING
