--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(clean_chemo)
 export(complement_metadata_structures)
 export(create_adducts_neg)
 export(create_adducts_pos)
+export(create_components)
 export(create_dir)
 export(create_edges_spectra)
 export(decorate_bio)
