--- a/params/default/params.yaml
+++ b/params/default/params.yaml
@@ -218,7 +218,7 @@ files:
       components:
 
         #' Raw components file. STRING
-        raw: ~
+        raw: data/interim/features/96fa7c88200e4a03bee4644e581e3fb0_components.tsv.gz
 
   #' Taxa files.
   taxa:
