--- a/params/default/prepare_taxa.yaml
+++ b/params/default/prepare_taxa.yaml
@@ -15,7 +15,7 @@ files:
     raw: data/source/96fa7c88200e4a03bee4644e581e3fb0_metadata.tsv
 
     #' Taxonomically informed features file. STRING
-    processed: data/interim/taxa/96fa7c88200e4a03bee4644e581e3fb0_taxed.tsv.gz
+    prepared: data/interim/taxa/96fa7c88200e4a03bee4644e581e3fb0_taxed.tsv.gz
 
 #' Names of the different variables in the input files.
 names:
