--- a/params/default/prepare_annotations_spectra.yaml
+++ b/params/default/prepare_annotations_spectra.yaml
@@ -11,9 +11,9 @@ files:
       spectral:
         - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_spectral_matches.tsv.gz
 
-    #' List of pretreated annotations. STRING
-    pretreated:
-      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_spectral_matches_pretreated.tsv.gz
+    #' List of prepared annotations. STRING
+    prepared:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_spectral_matches_prepared.tsv.gz
 
   #' Libraries files.
   libraries:
