--- a/params/default/prepare_libraries_sop_closed.yaml
+++ b/params/default/prepare_libraries_sop_closed.yaml
@@ -11,8 +11,8 @@ files:
       raw:
 
         #' Closed structure organism pairs library. STRING
-        closed: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+        closed: ../lotus-processor/data/prepared/230106_closed_metadata.csv.gz
 
       #' List of prepared structure organism pairs libraries. STRING
-      processed: 
+      prepared: 
         - data/interim/libraries/sop/closed_prepared.tsv.gz
