--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(prepare_features_edges)
 export(prepare_features_tables)
 export(prepare_libraries_adducts)
 export(prepare_libraries_sop_closed)
+export(prepare_libraries_sop_ecmdb)
 export(prepare_libraries_sop_lotus)
 export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
