--- a/params/default/params.yaml
+++ b/params/default/params.yaml
@@ -119,10 +119,13 @@ files:
       raw:
 
         #' Closed structure organism pairs library. STRING
-        closed: ../lotus-processor/data/prepared/230106_closed_metadata.csv.gz
+        closed: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+
+        #' ECMDB structure organism pairs library. STRING
+        ecmdb: data/source/libraries/sop/ecmdb.json.zip
 
         #' Lotus raw structure organism pairs library. STRING
-        lotus: ~
+        lotus: data/source/libraries/sop/lotus.csv.gz
 
       #' List of prepared structure organism pairs libraries. STRING
       prepared: 
