--- a/params/default/prepare_libraries_sop_ecmdb.yaml
+++ b/params/default/prepare_libraries_sop_ecmdb.yaml
@@ -10,9 +10,9 @@ files:
       #' Raw structure organism pairs libraries.
       raw:
 
-        #' Closed structure organism pairs library. STRING
-        closed: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+        #' ECMDB structure organism pairs library. STRING
+        ecmdb: data/source/libraries/sop/ecmdb.json.zip
 
       #' List of prepared structure organism pairs libraries. STRING
       prepared: 
-        - data/interim/libraries/sop/closed_prepared.tsv.gz
+        - data/interim/libraries/sop/ecmdb_prepared.tsv.gz
