--- a/paths.yaml
+++ b/paths.yaml
@@ -72,6 +72,7 @@ data:
       sop:
         path: data/source/libraries/sop
         closed: ../lotus-processor/data/processed/230224_closed_metadata.csv.gz
+        ecmdb: data/source/libraries/sop/ecmdb.json.zip
         hmdb: data/source/libraries/sop/hmdb_metabolites.zip
         lotus: data/source/libraries/sop/lotus.csv.gz
       spectra:
@@ -119,6 +120,7 @@ params:
         adducts: params/default/prepare_libraries_adducts.yaml
         sop:
           closed: params/default/prepare_libraries_sop_closed.yaml
+          ecmdb: params/default/prepare_libraries_sop_ecmdb.yaml
           hmdb: params/default/prepare_libraries_sop_hmdb.yaml
           lotus: params/default/prepare_libraries_sop_lotus.yaml
           merged: params/default/prepare_libraries_sop_merged.yaml
@@ -149,6 +151,7 @@ params:
         adducts: params/user/prepare_libraries_adducts.yaml
         sop:
           closed: params/user/prepare_libraries_sop_closed.yaml
+          ecmdb: params/user/prepare_libraries_sop_ecmdb.yaml
           hmdb: params/user/prepare_libraries_sop_hmdb.yaml
           lotus: params/user/prepare_libraries_sop_lotus.yaml
           merged: params/user/prepare_libraries_sop_merged.yaml
@@ -176,6 +179,8 @@ urls:
       neg: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_neg.mgf
       pos: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_pos.mgf
       with_rt: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_with_rt.mgf
+  ecmdb:
+    metabolites: https://ecmdb.ca/download/ecmdb.json.zip
   hmdb:
     metabolites: https://hmdb.ca/system/downloads/current/hmdb_metabolites.zip
     spectra:
