--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -34,4 +34,5 @@ jobs:
         run: R CMD INSTALL .
       - name: Run tests
         run: |
+          Rscript inst/scripts/change_tests.R
           Rscript inst/scripts/tima_mini.R
