--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,15 +21,13 @@ Imports:
     data.table (>= 1.14.8),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.0),
-    future (>= 1.32.0),
-    future.apply (>= 1.10.0),
-    future.callr (>= 0.8.1),
     igraph (>= 1.4.1),
     jsonlite (>= 1.8.4),
     MetaboAnnotation (>= 1.2.0),
     MsBackendMgf (>= 1.6.0),
     MsCoreUtils (>= 1.10.0),
-    progressr (>= 0.13.0),
+    parallelly (>= 1.34.0),
+    pbmcapply (>= 1.5.1),
     readr (>= 2.1.4),
     rotl (>= 3.0.14),
     Spectra (>= 1.8.1),
