--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(create_components)
 export(create_dir)
 export(create_edges_progress)
 export(create_edges_spectra)
+export(create_edges_sub)
 export(decorate_bio)
 export(decorate_chemo)
 export(decorate_masses)
