--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
-Version: 2.7.4
+Version: 2.8.0
 Authors@R: c(
     person("Adriano", "Rutz", , "rutz@imsb.biol.ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0443-9902")),
@@ -26,10 +26,11 @@ Imports:
     MetaboAnnotation (>= 1.2.0),
     MsBackendMgf (>= 1.6.0),
     MsCoreUtils (>= 1.10.0),
-    parallelly (>= 1.34.0),
+    parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
     readr (>= 2.1.4),
     rotl (>= 3.0.14),
+    shiny (>= 1.7.4),
     Spectra (>= 1.8.2),
     stats,
     stringr (>= 1.5.0),
