--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,7 @@ Collate:
     'create_adducts_pos.R'
     'create_components.R'
     'create_dir.R'
+    'create_edges_parallel.R'
     'create_edges_progress.R'
     'create_edges_spectra.R'
     'decorate_bio.R'
@@ -81,7 +82,9 @@ Collate:
     'harmonize_names_sirius.R'
     'harmonize_spectra.R'
     'import_spectra.R'
+    'keep_peaks.R'
     'log_debug.R'
+    'normalize_peaks.R'
     'parse_cli_params.R'
     'parse_yaml_params.R'
     'parse_yaml_paths.R'
@@ -102,6 +105,7 @@ Collate:
     'prepare_taxa.R'
     'round_reals.R'
     'replace_id.R'
+    'sanitize_spectra.R'
     'split_tables_sop.R'
     'weight_annotations.R'
     'weight_bio.R'
