--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(create_adducts_neg)
 export(create_adducts_pos)
 export(create_components)
 export(create_dir)
+export(create_edges_parallel)
 export(create_edges_progress)
 export(create_edges_spectra)
 export(decorate_bio)
@@ -29,8 +30,10 @@ export(get_params)
 export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
+export(keep_peaks)
 export(log_debug)
 export(log_pipe)
+export(normalize_peaks)
 export(parse_cli_params)
 export(parse_yaml_params)
 export(parse_yaml_paths)
@@ -51,6 +54,7 @@ export(prepare_params)
 export(prepare_taxa)
 export(replace_id)
 export(round_reals)
+export(sanitize_spectra)
 export(split_tables_sop)
 export(weight_annotations)
 export(weight_bio)
