--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     image: adafede/tima-r
     volumes:
       - "./params:/params"
+      - "./inst:/inst"
+      - "./data:/data"
     command: Rscript inst/app/app.R
 
   tima-mini:
