--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,21 +16,27 @@ Depends:
     R (>= 4.1.0)
 Imports:
     BiocParallel (>= 1.32.6),
+    bs4Dash (>= 2.2.1),
     CompoundDb (>= 1.2.1),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.1),
+    gt (>= 0.8.0),
     igraph (>= 1.4.1),
     jsonlite (>= 1.8.4),
+    markdown (>= 1.5),
     MetaboAnnotation (>= 1.2.0),
     MsBackendMgf (>= 1.6.0),
     MsCoreUtils (>= 1.10.0),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
+    pingr (>= 2.0.2),
     readr (>= 2.1.4),
     rotl (>= 3.0.14),
     shiny (>= 1.7.4),
+    shinybusy (>= 0.3.1),
     shinyjs (>= 2.1.0),
+    shinyWidgets (>= 0.7.6),
     Spectra (>= 1.8.2),
     stats,
     stringr (>= 1.5.0),
@@ -39,12 +45,12 @@ Imports:
     tibble (>= 3.2.1),
     tidyr (>= 1.3.0),
     utils,
+    visNetwork (>= 2.1.2),
     yaml (>= 2.3.7)
 Suggests:
     knitr (>= 1.42),
     spelling (>= 2.2.1),
-    testthat (>= 3.1.7),
-    visNetwork (>= 2.1.2)
+    testthat (>= 3.1.7)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
