--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   docker:
-    # looks faster than ubuntu-latest
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Cache Docker layers
         uses: actions/cache@v3
