--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "./params:/params"
       - "./inst:/inst"
       - "./data:/data"
-    command: Rscript -e "shiny::runApp(appDir = 'inst/app', host = '0.0.0.0', port = 3838)"
+    command: Rscript inst/scripts/run_app.R
 
   tima-mini:
     build: "."
