--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -37,3 +37,5 @@ jobs:
         run: |
           Rscript inst/scripts/change_tests.R
           Rscript inst/scripts/tima_mini.R
+          # Check if targets works correctly
+          Rscript inst/scripts/tima_mini.R
