--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,17 +9,23 @@ Authors@R: c(
   )
 Maintainer: Adriano Rutz <rutz@imsb.biol.ethz.ch>
 Description: TIMA provides the infrastructure to perform Taxonomically Informed Metabolite Annotation.
-License: GPL (>= 3)
 URL: https://github.com/taxonomicallyinformedannotation/tima-r, https://taxonomicallyinformedannotation.github.io/tima-r/
 BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
+License: GPL (>= 3)
+Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+ByteCompile: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
 Depends:
     R (>= 4.1.0)
 Imports:
     BiocManager (>= 1.30.20),
-    BiocParallel (>= 1.32.6),
+    BiocParallel (>= 1.33.12),
     bs4Dash (>= 2.2.1),
     clustermq (>= 0.8.95.5),
-    CompoundDb (>= 1.2.1),
+    CompoundDb (>= 1.3.3),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.1),
@@ -28,9 +34,9 @@ Imports:
     igraph (>= 1.4.1),
     jsonlite (>= 1.8.4),
     markdown (>= 1.5),
-    MetaboAnnotation (>= 1.2.0),
-    MsBackendMgf (>= 1.6.0),
-    MsCoreUtils (>= 1.10.0),
+    MetaboAnnotation (>= 1.3.1),
+    MsBackendMgf (>= 1.7.5),
+    MsCoreUtils (>= 1.11.5),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
     pingr (>= 2.0.2),
@@ -42,7 +48,7 @@ Imports:
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
     shinyWidgets (>= 0.7.6),
-    Spectra (>= 1.8.3),
+    Spectra (>= 1.9.14),
     stats,
     stringr (>= 1.5.0),
     targets (>= 0.14.3),
@@ -52,16 +58,18 @@ Imports:
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.7)
+Remotes:
+    Bioconductor/BiocParallel,
+    RforMassSpectrometry/CompoundDb,
+    RforMassSpectrometry/MetaboAnnotation,
+    RforMassSpectrometry/MsBackendMgf,
+    RforMassSpectrometry/MsCoreUtils,
+    RforMassSpectrometry/Spectra,
 Suggests: 
     knitr (>= 1.42),
+    pak (>= 0.4.0.9000),
     spelling (>= 2.2.1),
     testthat (>= 3.1.7)
-Config/testthat/edition: 3
-Encoding: UTF-8
-LazyData: true
-ByteCompile: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
 Collate:
     'annotate_masses.R'
     'annotate_spectra.R'
@@ -120,7 +128,7 @@ Collate:
     'weight_annotations.R'
     'weight_bio.R'
     'weight_chemo.R'
-VignetteBuilder: 
+VignetteBuilder:
     knitr
 biocViews: metabolite annotation, chemotaxonomy, scoring system, natural products, computational metabolomics, taxonomic distance, specialized metabolome
 X-schema.org-keywords: metabolite annotation, chemotaxonomy, scoring system, natural products, computational metabolomics, taxonomic distance, specialized metabolome
