--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -25,10 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::pkgdown, local::.
-          needs: website
+      # - uses: r-lib/actions/setup-r-dependencies@v2
+        # with:
+          # extra-packages: any::pkgdown, local::.
+          # needs: website
 
       - name: Install package
         run: |
