--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     clustermq (>= 0.8.95.5),
     CompoundDb (>= 1.3.3),
     crayon (>= 1.5.2),
+    desc (>= 1.4.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.1),
     future (>= 1.32.0),
