--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     dplyr (>= 1.1.1),
     future (>= 1.32.0),
     gt (>= 0.8.0),
+    httr (>= 1.4.5),
     igraph (>= 1.4.1),
     jsonlite (>= 1.8.4),
     markdown (>= 1.5),
