--- a/params/default/params.yaml
+++ b/params/default/params.yaml
@@ -182,22 +182,22 @@ files:
 
         #' List of negative experimental spectral libraries. STRING
         neg:
-          - data/interim/libraries/spectra/exp/internal_neg.sqlite
+          - data/interim/libraries/spectra/exp/internal_neg.rds
 
         #' List of positive experimental spectral libraries. STRING
         pos:
-          - data/interim/libraries/spectra/exp/internal_pos.sqlite
+          - data/interim/libraries/spectra/exp/internal_pos.rds
 
       #' In silico libraries
       is:
 
         #' List of negative in silico spectral libraries. STRING
         neg:
-          - data/interim/libraries/spectra/is/lotus_neg.sqlite
+          - data/interim/libraries/spectra/is/lotus_neg.rds
 
         #' List of positive in silico spectral libraries. STRING
         pos:
-          - data/interim/libraries/spectra/is/lotus_pos.sqlite
+          - data/interim/libraries/spectra/is/lotus_pos.rds
 
   #' Networks files.
   networks:
