--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
     BiocParallel (>= 1.32.6),
     bs4Dash (>= 2.2.1),
     clustermq (>= 0.8.95.5),
-    CompoundDb (>= 1.2.1),
+    CompoundDb (>= 1.3.3),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.1),
@@ -29,9 +29,9 @@ Imports:
     igraph (>= 1.4.1),
     jsonlite (>= 1.8.4),
     markdown (>= 1.5),
-    MetaboAnnotation (>= 1.2.0),
-    MsBackendMgf (>= 1.6.0),
-    MsCoreUtils (>= 1.10.0),
+    MetaboAnnotation (>= 1.3.1),
+    MsBackendMgf (>= 1.7.5),
+    MsCoreUtils (>= 1.11.5),
     parallelly (>= 1.35.0),
     pbmcapply (>= 1.5.1),
     pingr (>= 2.0.2),
@@ -43,7 +43,7 @@ Imports:
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
     shinyWidgets (>= 0.7.6),
-    Spectra (>= 1.8.3),
+    Spectra (>= 1.9.14),
     stats,
     stringr (>= 1.5.0),
     targets (>= 0.14.3),
@@ -53,6 +53,12 @@ Imports:
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.7)
+Remotes:
+    RforMassSpectrometry/CompoundDb,
+    RforMassSpectrometry/MetaboAnnotation,
+    RforMassSpectrometry/MsBackendMgf,
+    RforMassSpectrometry/MsCoreUtils,
+    RforMassSpectrometry/Spectra
 Suggests: 
     knitr (>= 1.42),
     spelling (>= 2.2.1),
